--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,17 +24,17 @@
 
         <!-- Intro Activity -->
         <activity
-            android:name=".IntroActivity"
+            android:name=".Activity.IntroActivity"
             android:exported="false" />
 
         <!-- Main Activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="false" />
 
         <!-- Các Activity khác -->
         <activity
-            android:name=".BaseActivity"
+            android:name=".Activity.BaseActivity"
             android:exported="false" />
         <activity
             android:name=".Login.Register"
