--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,35 +12,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Dat_Banh_Fpoly"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Activity.DetailActivity"
+            android:exported="false" />
         <!-- Login Activity: màn hình khởi động đầu tiên -->
         <activity
             android:name=".Activity.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Intro Activity -->
+        </activity> <!-- Intro Activity -->
         <activity
             android:name=".Login.Login"
-            android:exported="false" />
-
-        <!-- Main Activity -->
+            android:exported="false" /> <!-- Main Activity -->
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="false" />
-
-        <!-- Các Activity khác -->
+            android:exported="false" /> <!-- Các Activity khác -->
         <activity
             android:name=".Activity.BaseActivity"
             android:exported="false" />
         <activity
             android:name=".Login.Register"
             android:exported="false" />
-
     </application>
 
 </manifest>
