--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.Dat_Banh_Fpoly"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.DetailActivity"
+            android:name=".Activity.CardActivity"
             android:exported="false" />
-        <!-- Login Activity: màn hình khởi động đầu tiên -->
+        <activity
+            android:name=".Activity.DetailActivity"
+            android:exported="false" /> <!-- Login Activity: màn hình khởi động đầu tiên -->
         <activity
             android:name=".Activity.IntroActivity"
             android:exported="true">
