--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Dat_Banh_Fpoly"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.FavoriteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.OrderHistoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.RepassDialog"
             android:exported="false" />
         <activity
@@ -25,7 +31,7 @@
             android:name=".Activity.DetailActivity"
             android:exported="false" /> <!-- Login Activity: màn hình khởi động đầu tiên -->
         <activity
-            android:name=".Login.Login"
+            android:name=".Activity.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +40,7 @@
             </intent-filter>
         </activity> <!-- Intro Activity -->
         <activity
-            android:name=".Activity.IntroActivity"
+            android:name=".Login.Login"
             android:exported="false" /> <!-- Main Activity -->
         <activity
             android:name=".Activity.MainActivity"
