--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Dat_Banh_Fpoly"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.BookListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.AdminMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.FavoriteActivity"
             android:exported="false" />
         <activity
@@ -31,7 +40,7 @@
             android:name=".Activity.DetailActivity"
             android:exported="false" /> <!-- Login Activity: màn hình khởi động đầu tiên -->
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".Activity.NewBookActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,10 +49,10 @@
             </intent-filter>
         </activity> <!-- Intro Activity -->
         <activity
-            android:name=".Activity.IntroActivity"
+            android:name=".Login.Login"
             android:exported="false" /> <!-- Main Activity -->
         <activity
-            android:name=".Login.Login"
+            android:name=".Activity.IntroActivity"
             android:exported="false" /> <!-- Các Activity khác -->
         <activity
             android:name=".Activity.BaseActivity"
