--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.Dat_Banh_Fpoly"
         tools:targetApi="31">
         <activity
-            android:name=".Activity.BookListActivity"
+            android:name=".Activity.NewBookActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.AdminMainActivity"
+            android:name=".Activity.CardActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.FavoriteActivity"
@@ -31,16 +31,22 @@
             android:name=".Activity.RepassDialog"
             android:exported="false" />
         <activity
+            android:name=".Activity.EditBookActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.CardActivity"
+            android:name=".Activity.BookListActivity"
             android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".Activity.UpdateBookActivity"-->
+<!--            android:exported="false" />-->
         <activity
-            android:name=".Activity.DetailActivity"
+            android:name=".Activity.AdminMainActivity"
             android:exported="false" /> <!-- Login Activity: màn hình khởi động đầu tiên -->
         <activity
-            android:name=".Activity.NewBookActivity"
+            android:name=".Activity.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,10 +55,10 @@
             </intent-filter>
         </activity> <!-- Intro Activity -->
         <activity
-            android:name=".Login.Login"
+            android:name=".Activity.DetailActivity"
             android:exported="false" /> <!-- Main Activity -->
         <activity
-            android:name=".Activity.IntroActivity"
+            android:name=".Login.Login"
             android:exported="false" /> <!-- Các Activity khác -->
         <activity
             android:name=".Activity.BaseActivity"
